load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "colfetcher",
    srcs = [
        "cfetcher.go",
        "colbatch_scan.go",
        "fetcherstate_string.go",
    ],
    importpath = "github.com/cockroachdb/cockroach/pkg/sql/colfetcher",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/col/coldata",
        "//pkg/keys",
        "//pkg/kv",
        "//pkg/roachpb",
        "//pkg/sql/catalog/descpb",
        "//pkg/sql/colencoding",
        "//pkg/sql/colexec",
        "//pkg/sql/colexecbase",
        "//pkg/sql/colexecbase/colexecerror",
        "//pkg/sql/colmem",
        "//pkg/sql/execinfra",
        "//pkg/sql/execinfrapb",
        "//pkg/sql/row",
        "//pkg/sql/scrub",
        "//pkg/sql/sem/tree",
        "//pkg/sql/sqlbase",
        "//pkg/sql/types",
        "//pkg/util",
        "//pkg/util/encoding",
        "//pkg/util/hlc",
        "//pkg/util/log",
        "//vendor/github.com/cockroachdb/apd/v2:apd",
        "//vendor/github.com/cockroachdb/errors",
    ],
)
