load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "go_default_test",
    srcs = [
        "gc_job_test.go",
        "main_test.go",
    ],
    deps = [
        "//pkg/base",
        "//pkg/jobs",
        "//pkg/jobs/jobspb",
        "//pkg/keys",
        "//pkg/kv",
        "//pkg/security",
        "//pkg/security/securitytest",
        "//pkg/server",
        "//pkg/sql/catalog/catalogkv",
        "//pkg/sql/catalog/descpb",
        "//pkg/sql/gcjob",
        "//pkg/sql/sem/tree",
        "//pkg/sql/sqlbase",
        "//pkg/testutils/jobutils",
        "//pkg/testutils/serverutils",
        "//pkg/testutils/sqlutils",
        "//pkg/util/leaktest",
        "//pkg/util/randutil",
        "//pkg/util/timeutil",
        "//vendor/github.com/stretchr/testify/require",
    ],
)

go_test(
    name = "gcjob_test_test",
    srcs = [
        "gc_job_test.go",
        "main_test.go",
    ],
    deps = [
        "//pkg/base",
        "//pkg/jobs",
        "//pkg/jobs/jobspb",
        "//pkg/keys",
        "//pkg/kv",
        "//pkg/security",
        "//pkg/security/securitytest",
        "//pkg/server",
        "//pkg/sql/catalog/catalogkv",
        "//pkg/sql/catalog/descpb",
        "//pkg/sql/gcjob",
        "//pkg/sql/sem/tree",
        "//pkg/sql/sqlbase",
        "//pkg/testutils/jobutils",
        "//pkg/testutils/serverutils",
        "//pkg/testutils/sqlutils",
        "//pkg/util/leaktest",
        "//pkg/util/randutil",
        "//pkg/util/timeutil",
        "//vendor/github.com/stretchr/testify/require",
    ],
)
