load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "mutations",
    srcs = ["mutations.go"],
    importpath = "github.com/cockroachdb/cockroach/pkg/sql/mutations",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/sql/parser",
        "//pkg/sql/sem/tree",
        "//pkg/sql/sqlbase",
        "//pkg/sql/stats",
        "//pkg/util/encoding",
    ],
)

go_test(
    name = "mutations_test",
    srcs = ["mutations_test.go"],
    embed = [":mutations"],
    deps = ["//pkg/util/randutil"],
)

go_test(
    name = "go_default_test",
    srcs = ["mutations_test.go"],
    embed = [":go_default_library"],
    deps = ["//pkg/util/randutil"],
)
