load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "opt",
    srcs = [
        "colset.go",
        "column_meta.go",
        "constants.go",
        "doc.go",
        "metadata.go",
        "operator.go",
        "operator.og.go",
        "ordering.go",
        "rule_name.go",
        "rule_name.og.go",
        "rule_name_string.go",
        "table_meta.go",
        "telemetry.go",
        "view_dependencies.go",
    ],
    importpath = "github.com/cockroachdb/cockroach/pkg/sql/opt",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/server/telemetry",
        "//pkg/sql/catalog/colinfo",
        "//pkg/sql/opt/cat",
        "//pkg/sql/pgwire/pgcode",
        "//pkg/sql/pgwire/pgerror",
        "//pkg/sql/privilege",
        "//pkg/sql/sem/tree",
        "//pkg/sql/sqltelemetry",
        "//pkg/sql/types",
        "//pkg/util",
        "//pkg/util/log",
        "//vendor/github.com/cockroachdb/errors",
        "//vendor/github.com/lib/pq/oid",
    ],
)

go_test(
    name = "opt_test",
    srcs = [
        "colset_test.go",
        "metadata_test.go",
        "operator_test.go",
        "ordering_test.go",
    ],
    embed = [":opt"],
    deps = [
        "//pkg/sql/opt/cat",
        "//pkg/sql/opt/memo",
        "//pkg/sql/opt/testutils/testcat",
        "//pkg/sql/privilege",
        "//pkg/sql/sem/tree",
        "//pkg/sql/types",
        "//pkg/util",
    ],
)
