load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "querycache",
    srcs = ["query_cache.go"],
    importpath = "github.com/cockroachdb/cockroach/pkg/sql/querycache",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/sql/opt/memo",
        "//pkg/sql/sqlbase",
        "//pkg/util/syncutil",
        "//vendor/github.com/cockroachdb/errors",
    ],
)

go_test(
    name = "querycache_test",
    srcs = ["query_cache_test.go"],
    embed = [":querycache"],
    deps = [
        "//pkg/sql/opt/memo",
        "//pkg/sql/sqlbase",
        "//pkg/util/randutil",
        "//vendor/github.com/cockroachdb/errors",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["query_cache_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//pkg/sql/opt/memo",
        "//pkg/sql/sqlbase",
        "//pkg/util/randutil",
        "//vendor/github.com/cockroachdb/errors",
    ],
)
