load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "row",
    srcs = [
        "deleter.go",
        "errors.go",
        "expr_walker.go",
        "fetcher.go",
        "fk_spans.go",
        "helper.go",
        "inserter.go",
        "kv_batch_fetcher.go",
        "kv_fetcher.go",
        "partial_index.go",
        "row_converter.go",
        "truncate.go",
        "updater.go",
        "writer.go",
    ],
    importpath = "github.com/cockroachdb/cockroach/pkg/sql/row",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/keys",
        "//pkg/kv",
        "//pkg/kv/kvserver/concurrency/lock",
        "//pkg/roachpb",
        "//pkg/sql/catalog/descpb",
        "//pkg/sql/pgwire/pgcode",
        "//pkg/sql/pgwire/pgerror",
        "//pkg/sql/scrub",
        "//pkg/sql/sem/builtins",
        "//pkg/sql/sem/transform",
        "//pkg/sql/sem/tree",
        "//pkg/sql/span",
        "//pkg/sql/sqlbase",
        "//pkg/sql/types",
        "//pkg/storage/enginepb",
        "//pkg/util",
        "//pkg/util/encoding",
        "//pkg/util/hlc",
        "//pkg/util/log",
        "//pkg/util/timeutil",
        "//pkg/util/unique",
        "//vendor/github.com/cockroachdb/errors",
    ],
)

go_test(
    name = "row_test",
    srcs = [
        "fetcher_mvcc_test.go",
        "fetcher_test.go",
        "main_test.go",
    ],
    embed = [":row"],
    deps = [
        "//pkg/base",
        "//pkg/keys",
        "//pkg/kv",
        "//pkg/kv/kvserver",
        "//pkg/roachpb",
        "//pkg/security",
        "//pkg/security/securitytest",
        "//pkg/server",
        "//pkg/sql/catalog/catalogkv",
        "//pkg/sql/catalog/descpb",
        "//pkg/sql/sem/tree",
        "//pkg/sql/sqlbase",
        "//pkg/storage",
        "//pkg/testutils",
        "//pkg/testutils/serverutils",
        "//pkg/testutils/sqlutils",
        "//pkg/util",
        "//pkg/util/encoding",
        "//pkg/util/leaktest",
        "//pkg/util/log",
        "//pkg/util/randutil",
        "//vendor/github.com/cockroachdb/errors",
        "//vendor/github.com/stretchr/testify/assert",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "fetcher_mvcc_test.go",
        "fetcher_test.go",
        "main_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        ":row",
        "//pkg/base",
        "//pkg/keys",
        "//pkg/kv",
        "//pkg/kv/kvserver",
        "//pkg/roachpb",
        "//pkg/security",
        "//pkg/security/securitytest",
        "//pkg/server",
        "//pkg/sql/catalog/catalogkv",
        "//pkg/sql/catalog/descpb",
        "//pkg/sql/sem/tree",
        "//pkg/sql/sqlbase",
        "//pkg/storage",
        "//pkg/testutils",
        "//pkg/testutils/serverutils",
        "//pkg/testutils/sqlutils",
        "//pkg/util",
        "//pkg/util/encoding",
        "//pkg/util/leaktest",
        "//pkg/util/log",
        "//pkg/util/randutil",
        "//vendor/github.com/cockroachdb/errors",
        "//vendor/github.com/stretchr/testify/assert",
    ],
)
