load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "schemaexpr",
    srcs = [
        "check_constraint.go",
        "column.go",
        "computed_column.go",
        "doc.go",
        "expr.go",
        "partial_index.go",
        "testutils.go",
    ],
    importpath = "github.com/cockroachdb/cockroach/pkg/sql/schemaexpr",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/sql/catalog/descpb",
        "//pkg/sql/parser",
        "//pkg/sql/pgwire/pgcode",
        "//pkg/sql/pgwire/pgerror",
        "//pkg/sql/sem/transform",
        "//pkg/sql/sem/tree",
        "//pkg/sql/sqlbase",
        "//pkg/sql/types",
        "//vendor/github.com/cockroachdb/errors",
    ],
)

go_test(
    name = "schemaexpr_test",
    srcs = [
        "check_constraint_test.go",
        "column_test.go",
        "expr_test.go",
        "partial_index_test.go",
    ],
    embed = [":schemaexpr"],
    deps = [
        "//pkg/sql/catalog/descpb",
        "//pkg/sql/parser",
        "//pkg/sql/sem/builtins",
        "//pkg/sql/sem/tree",
        "//pkg/sql/sqlbase",
        "//pkg/sql/types",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "check_constraint_test.go",
        "column_test.go",
        "expr_test.go",
        "partial_index_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//pkg/sql/catalog/descpb",
        "//pkg/sql/parser",
        "//pkg/sql/sem/builtins",
        "//pkg/sql/sem/tree",
        "//pkg/sql/sqlbase",
        "//pkg/sql/types",
    ],
)
