load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "sessiondata",
    srcs = [
        "search_path.go",
        "sequence_state.go",
        "session_data.go",
    ],
    importpath = "github.com/cockroachdb/cockroach/pkg/sql/sessiondata",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/sql/lex",
        "//pkg/sql/pgwire/pgcode",
        "//pkg/sql/pgwire/pgerror",
        "//pkg/sql/pgwire/pgnotice",
        "//pkg/util/syncutil",
    ],
)

go_test(
    name = "sessiondata_test",
    srcs = ["search_path_test.go"],
    embed = [":sessiondata"],
    deps = ["//vendor/github.com/stretchr/testify/assert"],
)

go_test(
    name = "go_default_test",
    srcs = ["search_path_test.go"],
    embed = [":go_default_library"],
    deps = ["//vendor/github.com/stretchr/testify/assert"],
)
