load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "sqlbase",
    srcs = [
        "cancel_checker.go",
        "col_type_info.go",
        "column_resolver.go",
        "column_type_encoding.go",
        "column_type_properties.go",
        "computed_exprs.go",
        "data_source.go",
        "database.go",
        "database_desc.go",
        "datum_alloc.go",
        "default_exprs.go",
        "descriptor.go",
        "encoded_datum.go",
        "errors.go",
        "evalctx.go",
        "expr_filter.go",
        "index_encoding.go",
        "internal.go",
        "keys.go",
        "metadata.go",
        "node_liveness.go",
        "ordering.go",
        "partition.go",
        "prepared_statement.go",
        "result_columns.go",
        "roundtrip_format.go",
        "schema_desc.go",
        "select_name_resolution.go",
        "sort.go",
        "structured.go",
        "system.go",
        "system_columns.go",
        "table.go",
        "table_col_set.go",
        "table_desc.go",
        "testutils.go",
        "type_desc.go",
    ],
    importpath = "github.com/cockroachdb/cockroach/pkg/sql/sqlbase",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/clusterversion",
        "//pkg/config/zonepb",
        "//pkg/geo",
        "//pkg/geo/geogen",
        "//pkg/geo/geoindex",
        "//pkg/geo/geopb",
        "//pkg/keys",
        "//pkg/kv",
        "//pkg/kv/kvserver/kvserverpb",
        "//pkg/roachpb",
        "//pkg/security",
        "//pkg/settings/cluster",
        "//pkg/sql/catalog/descpb",
        "//pkg/sql/enum",
        "//pkg/sql/oidext",
        "//pkg/sql/parser",
        "//pkg/sql/pgwire/pgcode",
        "//pkg/sql/pgwire/pgerror",
        "//pkg/sql/privilege",
        "//pkg/sql/sem/transform",
        "//pkg/sql/sem/tree",
        "//pkg/sql/sessiondata",
        "//pkg/sql/types",
        "//pkg/util",
        "//pkg/util/bitarray",
        "//pkg/util/duration",
        "//pkg/util/encoding",
        "//pkg/util/errorutil",
        "//pkg/util/errorutil/unimplemented",
        "//pkg/util/hlc",
        "//pkg/util/interval",
        "//pkg/util/ipaddr",
        "//pkg/util/json",
        "//pkg/util/log",
        "//pkg/util/protoutil",
        "//pkg/util/randutil",
        "//pkg/util/timeofday",
        "//pkg/util/timetz",
        "//pkg/util/timeutil",
        "//pkg/util/timeutil/pgdate",
        "//pkg/util/uint128",
        "//pkg/util/unique",
        "//pkg/util/uuid",
        "//vendor/github.com/cockroachdb/apd/v2:apd",
        "//vendor/github.com/cockroachdb/errors",
        "//vendor/github.com/lib/pq/oid",
        "//vendor/golang.org/x/text/language",
    ],
)

go_test(
    name = "sqlbase_test",
    srcs = [
        "column_type_encoding_test.go",
        "database_test.go",
        "dep_test.go",
        "encoded_datum_test.go",
        "helpers_test.go",
        "keys_test.go",
        "main_test.go",
        "result_columns_test.go",
        "roundtrip_format_test.go",
        "structured_test.go",
        "system_test.go",
        "table_col_set_test.go",
        "table_test.go",
        "type_desc_test.go",
        "utils_test.go",
        "validate_test.go",
    ],
    embed = [":sqlbase"],
    deps = [
        "//pkg/base",
        "//pkg/keys",
        "//pkg/kv",
        "//pkg/roachpb",
        "//pkg/security",
        "//pkg/security/securitytest",
        "//pkg/server",
        "//pkg/settings/cluster",
        "//pkg/sql/catalog/descpb",
        "//pkg/sql/parser",
        "//pkg/sql/sem/tree",
        "//pkg/sql/types",
        "//pkg/testutils",
        "//pkg/testutils/buildutil",
        "//pkg/testutils/serverutils",
        "//pkg/testutils/sqlutils",
        "//pkg/util",
        "//pkg/util/encoding",
        "//pkg/util/hlc",
        "//pkg/util/leaktest",
        "//pkg/util/log",
        "//pkg/util/protoutil",
        "//pkg/util/randutil",
        "//pkg/util/timeofday",
        "//pkg/util/timeutil",
        "//pkg/util/timeutil/pgdate",
        "//pkg/util/uuid",
        "//vendor/github.com/cockroachdb/apd/v2:apd",
        "//vendor/github.com/cockroachdb/errors",
        "//vendor/github.com/leanovate/gopter",
        "//vendor/github.com/leanovate/gopter/prop",
        "//vendor/github.com/stretchr/testify/require",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "column_type_encoding_test.go",
        "database_test.go",
        "dep_test.go",
        "encoded_datum_test.go",
        "helpers_test.go",
        "keys_test.go",
        "main_test.go",
        "result_columns_test.go",
        "roundtrip_format_test.go",
        "structured_test.go",
        "system_test.go",
        "table_col_set_test.go",
        "table_test.go",
        "type_desc_test.go",
        "utils_test.go",
        "validate_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//pkg/base",
        "//pkg/keys",
        "//pkg/kv",
        "//pkg/roachpb",
        "//pkg/security",
        "//pkg/security/securitytest",
        "//pkg/server",
        "//pkg/settings/cluster",
        "//pkg/sql/catalog/descpb",
        "//pkg/sql/parser",
        "//pkg/sql/sem/tree",
        "//pkg/sql/types",
        "//pkg/testutils",
        "//pkg/testutils/buildutil",
        "//pkg/testutils/serverutils",
        "//pkg/testutils/sqlutils",
        "//pkg/util",
        "//pkg/util/encoding",
        "//pkg/util/hlc",
        "//pkg/util/leaktest",
        "//pkg/util/log",
        "//pkg/util/protoutil",
        "//pkg/util/randutil",
        "//pkg/util/timeofday",
        "//pkg/util/timeutil",
        "//pkg/util/timeutil/pgdate",
        "//pkg/util/uuid",
        "//vendor/github.com/cockroachdb/apd/v2:apd",
        "//vendor/github.com/cockroachdb/errors",
        "//vendor/github.com/leanovate/gopter",
        "//vendor/github.com/leanovate/gopter/prop",
        "//vendor/github.com/stretchr/testify/require",
    ],
)
