load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "sqltelemetry",
    srcs = [
        "diagnostics.go",
        "doc.go",
        "exec.go",
        "iam.go",
        "partitioning.go",
        "pgwire.go",
        "planning.go",
        "report.go",
        "scalar.go",
        "schema.go",
        "session.go",
        "show.go",
    ],
    importpath = "github.com/cockroachdb/cockroach/pkg/sql/sqltelemetry",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/server/telemetry",
        "//pkg/settings",
        "//pkg/sql/pgwire/pgcode",
        "//pkg/sql/pgwire/pgerror",
        "//pkg/util/log",
        "//vendor/github.com/cockroachdb/errors",
    ],
)
