load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "reduce",
    srcs = [
        "datadriven.go",
        "pass.go",
        "reduce.go",
    ],
    importpath = "github.com/cockroachdb/cockroach/pkg/testutils/reduce",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/util/ctxgroup",
        "//pkg/util/timeutil",
        "//vendor/github.com/cockroachdb/datadriven",
        "//vendor/github.com/cockroachdb/errors",
    ],
)

go_test(
    name = "reduce_test",
    srcs = ["reduce_test.go"],
    data = glob(["testdata/**"]),
    deps = [":reduce"],
)

go_test(
    name = "go_default_test",
    srcs = ["reduce_test.go"],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [":reduce"],
)
